Work some on home page.  Header, footer. Added some assets.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,152 @@
 @charset "utf-8";
 /* CSS Document */
 
+/*This is so that the padding and margins added later don't affect the box sizes*/
+*{
+	box-sizing: border-box;
+}
+
+body{
+	background-image: url("assests/Mars~orig.jpg");
+	
+}
+
+#mainWrapper{
+    width: 1200px;
+    height: 100%;
+    margin: 0px auto;
+    background-color: rgba(253,253,253,1.00);
+}
+
+header{
+	heigth: 250px;
+	width: 1200px;
+	margin: 20px 0px 0px 0px;
+	background-color: #cb4e41;
+			
+}
+
+#tagline{
+	text-align: right;
+	color:rgba(253,253,253,1.00);
+	float: right;
+	margin: 55px 220px 55px 150px;
+	font-family: acme-gothic, sans-serif; 
+    font-weight: 475; 
+    font-style: normal; 
+}
+
+header img{
+	margin: 12px 0px 10px 90px;
+	padding: 15px 15px 15px 15px;
+	background-color: rgba(253,253,253,1.00) ;
+	
+}
+
+nav{
+	height: 50px;
+	width: 1200px;
+	background-color: #FACC5C;
+	margin: 0px 0px 20px 0px;
+	padding: 1px;
+}
+
+nav ul{
+	list-style: none;
+}
+
+nav li{
+	display: inline-block;
+	margin: 0px 105px 20px 100px;
+	padding: 0px 15px 10px 50px;
+	color: rgba(0,0,0,1.00);
+	font-family:"Myriad Pro","sans-serif";
+}
+
+nav a{
+	color: rgba(0,0,0,1.00);
+}
+
+/*.hikes{
+	float: left;
+	
+}*/
+
+#roverHikes img{
+	height: 200px;
+	width: 300px;
+	margin: 0px 10px 0px 50px;
+	padding: 0px;
+	border-top: 4px solid black;
+	border-right: 4px solid black;
+	/*border-bottom: 2px solid black;*/
+	border-left: 4px solid black;
+	border-radius: 10px 10px 0px 0px;
+		}
+
+#roverHikes h2{
+	margin: -5px 10px 10px 70px
+	
+}
+
+#roverHikes p{
+	height: 140px;
+	width: 300px;
+	margin: -36px 10px 20px 50px;
+	padding: 30px 10px 10px 10px;
+	border-right: 4px solid;
+	/*border-top: 2px solid;*/
+	border-bottom: 4px solid;
+	border-left: 4px solid;
+	border-radius: 0px 0px 10px 10px;
+	}
+
+#roverHikes{
+	float: left;
+}
+
+#northernHikes img{
+   	height: 200px;
+	width: 300px;
+	margin: 0px 10px 0px 50px;
+	padding: 0px;
+	border-top: 4px solid black;
+	border-right: 4px solid black;
+	/*border-bottom: 2px solid black;*/
+	border-left: 4px solid black;
+	border-radius: 10px 10px 0px 0px;
+}
+
+#northernHikes h2{
+	margin: -5px 10px 10px 70px;
+}
+
+northernHikes p{
+	height: 140px;
+	width: 300px;
+	margin: -36px 10px 20px 50px;
+	padding: 30px 10px 10px 10px;
+	border-right: 4px solid;
+	/*border-top: 2px solid;*/
+	border-bottom: 4px solid;
+	border-left: 4px solid;
+	border-radius: 0px 0px 10px 10px;
+	}
+
+#northernHikes{
+	float: left;
+}
+
+footer{
+	height: 100px;
+	width: 1200px;
+	margin: 20px 0px 0px 0px;
+	padding: 10px;
+	background-color: #cb4e41;
+	color:rgba(253,253,253,1.00);
+	text-align: center;
+	clear: both;
+}
+
+
+
