--- a/contactUs.css
+++ b/contactUs.css
@@ -74,6 +74,23 @@ nav a{
 	font-family: myriad-pro-semiextended, sans-serif;	
 }
 
+#contactInfo fieldset{
+	border: none;
+}
+  label {
+    display: inline-block; width: 8em;
+  }
+  fieldset div {
+    margin-bottom: 2em;
+  }
+  fieldset .help {
+    display: inline-block;
+  }
+  .ui-tooltip {
+    width: 210px;
+  }
+
+
 #ourInfo{
 	height: 200px;
 	width: 1200px;
@@ -81,6 +98,38 @@ nav a{
 	margin:30px auto;
 	padding: 50px 80px;
 	font-family: myriad-pro-semiextended, sans-serif;	
+}
+
+#addInfo{
+	height: 80px;
+	width: 400px;
+	padding: 30px;
+}
+
+#submit{
+	height: 34px;
+	width: 150px;
+	font-family: myriad-pro-semiextended, sans-serif;
+	background-color: #4485bb;
+	color: white;
+	border: none;
+	border-radius: 10px;
+	}
+
+#address{
+	margin: 25px 45px 25px -30px;;
+	float: left;
+	list-style: none;
+}
+
+#ourPhone{
+	margin: 40px 45px 25px 20px;
+	float: left;
+}
+
+#ourEmail{
+	margin: 40px 10px 25px 45px;
+	float: left;
 }
 
 
