--- a/otherPages.css
+++ b/otherPages.css
@@ -82,16 +82,17 @@ nav a{
 }
 
 #pic p{
-	margin: -22px 0px 0px 110px;
+	margin: -225px 0px 0px 110px;
 	padding: 0px;
-	font-size: 11px;
-	color: white;
+	font-size: 14px;
+	color:rgba(155,147,147,1.00);
 }
+
 
 #copyText{
 	height: 280px;
 	width: 550px;
-	margin: 50px 80px 200px 30px;
+	margin: 50px 80px 50px 30px;
 	font-family: myriad-pro-semiextended, sans-serif;
 	float: left;
 
@@ -104,7 +105,7 @@ nav a{
 }
 
 #us {
-	height:480px;
+	height:540px;
 	width: 1200px;
 	background-color: antiquewhite;
 	/*background-color: #c7b299;*/
